[package]
name = "dorsum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
axum = "0.6.19"
tower-http = { version = "0.4.3", features = ["fs"] }
serde = { version = "1.0.179", features = ["derive"]}
serde_json = "1.0.104"

[dev-dependencies]
anyhow = "1.0.72"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]